[package]
name = "esp-rust-mqtt-sensor"
version = "0.1.0"
authors = ["yplam <yplam@yplam.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z"
lto = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
lto = true

[features]
default = ["experimental"]

experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]


[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = "0.42.1"
esp-idf-hal = "0.38"
embedded-svc = { version = "0.22", features = ["json_io"] }
embedded-hal = "0.2"
toml-cfg                = "0.1.3"
byteorder               = "1"
crc                     = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
